Fix overflow issue on too few commands

--- a/improved-initiative.less
+++ b/improved-initiative.less
@@ -289,6 +289,7 @@ input[type="number"] {
     .scrollframe {
         width: @button-width + @scrollbar-width;
         overflow-x: hidden;
+        overflow-y: scroll;
     }
     background-color: @primary-white;
     color: @primary-black;
